PROD_10-24-19/force-app/main/default/objects/Consultant__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Consultants</relationshipLabel>
    <relationshipName>Consultant_Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>