PROD_10-24-19/force-app/main/default/objects/Consultant__c/fields/PFG__c.field-meta.xml
<CustomField>
    <fullName>PFG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PFG</label>
    <type>Checkbox</type>
</CustomField>